--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ img {
   z-index: 1; /* Set a specific z-index value */
 }
 
+#3things {
+  z-index: 10; /* Set a specific z-index value */
+}
+
 section h2 {
   font-size: 24px;
   font-weight: bold;
