--- a/style.css
+++ b/style.css
@@ -15,6 +15,10 @@ img {
   z-index: 10; /* Set a specific z-index value */
 }
 
+#the-quest-for-social-impact {
+  z-index: 10; /* Set a specific z-index value */
+}
+
 
 
 section h2 {
