--- a/style.css
+++ b/style.css
@@ -28,10 +28,13 @@ section h2 {
   font-weight: bold;
   margin-top: 20px;
   text-align: center;
-  color: white; /* Set text color to white */
+  color: white; 
   font-family: 'Open Sans', sans-serif; /* Example custom font */
 }
 
 p {
+  font-size: 12px;
+  text-align: center;
   color: white;
+  font-family: 'Open Sans', sans-serif;
 }
