--- a/style.css
+++ b/style.css
@@ -3,6 +3,9 @@ ion body {
 }
 
 img {
+  position: fixed; /* Anchors the container to the top */
+  top: 0;
+  left: 0;
   width: 100%;
   height: auto;
 }
