--- a/style.css
+++ b/style.css
@@ -7,9 +7,14 @@ img {
   height: auto;
 }
 
-#logoImage {
-  z-index: 1; /* Set a specific z-index value */
+.hero-image {
+  position: fixed; /* Anchors the container to the top */
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 1; /* Ensures image stays behind text */
 }
+
 
 #your-career-in-tech {
   z-index: 10; /* Set a specific z-index value */
