--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@ body {
   object-fit: cover; /* Maintains aspect ratio */
 }
 
-.content {
+main {
   padding-top: 500px; /* Adds padding to start content below image */
   z-index: 100; /* Ensures image stays behind text */
 }
