--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
 }
 
 main {
+  background: #121212;
   padding-top: 600px; /* Adds padding to start content below image */
   z-index: 0; /* Ensures image stays behind text */
 }
