--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 main {
-  background: #121212;
+  background-color: #121212;
   padding-top: 700px; /* Adds padding to start content below image */
 }
 
