--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ section h2 {
   font-size: 24px;
   font-weight: bold;
   margin-top: 20px;
+  padding-top: 50px;
   text-align: center;
   color: white; 
   font-family: 'Open Sans', sans-serif; /* Example custom font */
