--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ main {
 }
 
 .content {
+  width: 80%;
   background-color: #121212;
   position: relative;
   z-index: 2; /* Ensures image stays behind text */
