--- a/style.css
+++ b/style.css
@@ -25,8 +25,8 @@ main {
 
 .content {
   width: 80%;
-  padding-left: 10%;
-  background-color: #121212;
+  margin: 0 auto;
+  background-color: #212121;
   position: relative;
   z-index: 2; /* Ensures image stays behind text */
 }
