--- a/style.css
+++ b/style.css
@@ -51,3 +51,8 @@ section p {
   padding-left: 10%;
   padding-right: 10%;
 }
+
+.content-closing {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
