--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ section h2 {
   padding-right: 10%;
   padding-top: 50px;
   text-align: center;
-  color: #92fe9d; 
+  color: #00c9ff; 
   font-family: 'Afterglow-Regular', sans-serif; /* Example custom font */
 }
 
