--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@ body {
   position: fixed; /* Anchors the container to the top */
   top: 0;
   left: 0;
-  width: 100%;
+  width: 96%;
+  margin: 0 auto;
   z-index: 1; /* Ensures image stays behind text */
 }
 
@@ -55,4 +56,8 @@ section p {
 #closing {
   padding-top: 50px;
   padding-bottom: 50px;
+}
+
+a {
+  color: white;
 }
