--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
   top: 0;
   left: 0;
   width: 96%;
-  margin: 0 auto;
+  align: center;
   z-index: 1; /* Ensures image stays behind text */
 }
 
