--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ body {
 .hero-image {
   position: fixed; /* Anchors the container to the top */
   top: 10;
-  margin: auto;
+  margin: 0 auto;
   width: 96%;
   z-index: 1; /* Ensures image stays behind text */
 }
