--- a/style.css
+++ b/style.css
@@ -15,10 +15,8 @@ body {
   font-family: 'SourceSans', sans-serif;
 }
 
-.hero-image {
+.logoimage {
   position: fixed; /* Anchors the container to the top */
-  top: 10;
-  margin: 0 auto;
   width: 100%;
   z-index: 1; /* Ensures image stays behind text */
 }
