--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ main {
   width: 80%;
   margin: 0 auto;
   background-color: #212121;
+  opacity: 0.7; 
   position: relative;
   z-index: 2; /* Ensures image stays behind text */
 }
