--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ main {
 .content {
   width: 80%;
   margin: 0 auto;
-  background-color: #212121;
+  background-color: #030d25;
   opacity: 0.9; 
   position: relative;
   z-index: 2; /* Ensures image stays behind text */
