--- a/style.css
+++ b/style.css
@@ -73,3 +73,8 @@ img {
 .colored-sentence {
   color: #92fe9d; 
 }
+
+.p4g-mockups {
+  padding-top: 200px;
+  width: 100%; /* Scales image to be 100% of the viewport width */
+}
