--- a/style.css
+++ b/style.css
@@ -78,5 +78,6 @@ img {
   padding-top: 200px;
   width: 100%; /* Scales image to be 100% of the viewport width */
   margin: 0 auto;
-  position: relative;z-index: 2; /* Ensures image stays behind text */
+  position: relative;
+  z-index: 2; /* Ensures image stays behind text */
 }
