--- a/style.css
+++ b/style.css
@@ -75,9 +75,10 @@ img {
 }
 
 .p4g-mockups {
-  padding-top: 200px;
+  padding-top: 400px;
   width: 100%; /* Scales image to be 100% of the viewport width */
   margin: 0 auto;
   position: relative;
   z-index: 2; /* Ensures image stays behind text */
+  opacity: 1;
 }
