--- a/style.css
+++ b/style.css
@@ -22,9 +22,8 @@ body {
 }
 
 main {
-  background-color: #121212;
+  background-color: #020e27;
   padding-top: 400px; 
-  padding-bottom: 700px;
 }
 
 .content {
