--- a/style.css
+++ b/style.css
@@ -46,6 +46,13 @@ img {
   z-index: 2; /* Ensures image stays behind text */
 }
 
+/* Mobile width (screen width less than 768px) */
+@media only screen and (max-width: 768px) {
+  .content {
+    width: 90%;
+  }
+}
+
 section h2 {
   font-size: 60px;
   font-weight: normal;
