--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ a {
 button {
   /* General settings */
   background-color: #00c9ff; /* Change to your desired color */
-  color: #ffffff;
+  color: #020e27;
   padding: 10px 20px;
   font-family: 'SourceSans', sans-serif;
   font-size: 24px;
